--- a/School/School.csproj
+++ b/School/School.csproj
@@ -52,11 +52,13 @@
     <Compile Include="Id.cs" />
     <Compile Include="Value.cs" />
     <Compile Include="BuiltinFunctions.cs" />
+    <Compile Include="Test\SchoolTest.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <Folder Include="Surface\" />
     <Folder Include="Core\" />
+    <Folder Include="Test\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
