--- a/School/School.csproj
+++ b/School/School.csproj
@@ -54,7 +54,7 @@
     <Compile Include="Evaluator\Value.cs" />
     <Compile Include="Evaluator\Evaluator.cs" />
     <Compile Include="Evaluator\Env.cs" />
-    <Compile Include="Evaluator\BuiltinFunctions.cs" />
+    <Compile Include="Evaluator\BinaryOperators.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
