--- a/School/School.csproj
+++ b/School/School.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Evaluator\Env.cs" />
     <Compile Include="Evaluator\BinaryOperators.cs" />
     <Compile Include="Evaluator\Prelude.cs" />
+    <Compile Include="Intersperse.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
