Print () when a unit value is encountered while pretty printing.
Surface.Unit does not override ToString() method.

--- a/School/School.csproj
+++ b/School/School.csproj
@@ -70,5 +70,6 @@
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="Examples\helloworld.sc" />
+    <None Include="Examples\unitlist.sc" />
   </ItemGroup>
 </Project>
